--- a/Index.html
+++ b/Index.html
@@ -12,15 +12,12 @@
     <nav>
         <div class="logo">
             <img src="img/Hotelia horizontal blanco.svg">
-            <i class="fa-solid fa-bars"></i>
-        </div>
-        
+        </div>      
         <div class="menu">
             <a href="index.html" class="item">Inicio</a>
             <a href="ubicanos.html" class="item">Ubícanos</a>
             <a href="opiniones.html" class="item">Opiniones</a>
-            <hr class="menu-hr" noshade="">
-            <a href="#" class="item"><button class="navbar-button"><i class="fa-solid fa-user"></i> Iniciar Sesión</button></a>
+            <a href="#" class="item"><i class="fa-solid fa-user"></i> Iniciar Sesión</a>
         </div>
     </nav>
     <div>
