--- a/dashboard.html
+++ b/dashboard.html
@@ -20,7 +20,7 @@
             <div class="logos">
                 <div class="logo">
                 <img class="logo-1" id="logo-1" src="img/hotelia campana.svg"><span id="tex"></span>
-                <img class="logo-2" src="img/Angie.jpg">
+                <img class="logo-2" src="img/camilo.jpg">
                 </div>
             </div>
             
@@ -83,7 +83,7 @@
 
             <div class="column-1">
             <div class="profile"> 
-                <img src="img/Angie.jpg">
+                <img src="img/camilo.jpg">
             </div>
             </div>
             
