--- a/index.html
+++ b/index.html
@@ -110,8 +110,8 @@
       <h1>Nuestros usuarios dicen...</h1>
       <div class="cards">
         <div class="card">
-          <img class="border-img" src="img/diego.jfif">
-            <h4>Diego Rodriguez</h4> 
+          <img class="border-img" src="img/camilo.jpg">
+            <h4>juan camilo</h4> 
             <div class="stars"> 
             <i class="fa fa-star"></i>
             <i class="fa fa-star"></i>
@@ -123,8 +123,8 @@
         </div>
 
         <div class="card">
-          <img class="border-img" src="img/diana.jpg">
-          <h4>Diana García</h4>
+          <img class="border-img" src="img/camilo.jpg">
+          <h4>juan camilo</h4>
           <div class="stars">
             <i class="fa fa-star"></i>
             <i class="fa fa-star"></i>
@@ -136,8 +136,8 @@
       </div>
 
       <div class="card">
-        <img class="border-img" src="img/diego.jfif">
-        <h4>Diego Rodriguez</h4>
+        <img class="border-img" src="img/camilo.jpg">
+        <h4>juan camilo</h4>
         <div class="stars">
           <i class="fa fa-star"></i>
           <i class="fa fa-star"></i>
